@@ -22,6 +22,8 @@ See README and version control log for Test::Builder2 changes.
       modules internally.
     * Added Test::Builder2::Tester to test Test:: modules independent of
       their format. [github 112]
+    * Added Test::Builder2::History->plan to capture the plan event so
+      builders don't have to
 
     Bug Fixes
     * More $@ and $! protection.
